[gd_scene load_steps=4 format=3 uid="uid://v2rfmhs1ltk4"]

[ext_resource type="PackedScene" uid="uid://cgvb2nfbovs56" path="res://src/ois/state_managers/state_manager.tscn" id="1_04kvb"]
[ext_resource type="Script" path="res://src/ois/state_managers/two_handed_tool.gd" id="2_0s0m5"]
[ext_resource type="PackedScene" uid="uid://c7jka6pr2nc0" path="res://src/ois/states/state.tscn" id="3_vaw3y"]

[node name="StateManager" node_paths=PackedStringArray("current_state") instance=ExtResource("1_04kvb")]
script = ExtResource("2_0s0m5")
current_state = NodePath("IdleState")

[node name="IdleState" parent="." index="0" instance=ExtResource("3_vaw3y")]

[node name="Active1State" parent="." index="1" instance=ExtResource("3_vaw3y")]

[node name="Active2State" parent="." index="2" instance=ExtResource("3_vaw3y")]

[node name="Trigger1State" parent="." index="3" instance=ExtResource("3_vaw3y")]

[node name="Trigger2State" parent="." index="4" instance=ExtResource("3_vaw3y")]
